<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    <ScrollView
        android:id="@+id/ScrollView11"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp" >
            <TableLayout
                android:id="@+id/schedule"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:stretchColumns="0,1" >
            </TableLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@color/white"
        android:gravity="right"
        android:orientation="horizontal" >
        <ImageButton
            android:id="@+id/addSchedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:contentDescription="@string/addScheduleCaption"
            android:onClick="onAddButtonClicked"
            android:src="@drawable/content_new" />
        <ToggleButton
            android:id="@+id/toggleService"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="80"
            android:background="@color/white"
            android:gravity="center_vertical|center_horizontal|right"
            android:paddingRight="10dp"
            android:textColor="@color/button_text"
            android:textOff="@string/disabled_btn"
            android:textOn="@string/enabled_btn" />
    </LinearLayout>
</RelativeLayout>