<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent" >
    <!--
    http://www.premiumpixels.com/freebies/onoff-switches-and-toggles-psd/
    http://freebiesbooth.com/slick-on-off-switch
    -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="0.6"
                android:orientation="vertical" >
                <TextView
                    android:id="@+id/hourRange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:paddingLeft="5dp"
                    android:text="@string/placeholder"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                <TextView
                    android:id="@+id/weekDayRange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:paddingBottom="2dp"
                    android:paddingLeft="10dp"
                    android:text="@string/placeholder1"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>
            <ToggleButton
                android:id="@+id/toggleSchedule"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="5dp"
                android:background="@drawable/check"
                android:textOff=""
                android:textOn="" />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/light_green" />
            <ImageButton
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="0.01"
                android:background="@color/white"
                android:contentDescription="@string/delete"
                android:src="@drawable/content_discard" />
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_weight="0.05"
            android:background="@color/light_green" />
    </LinearLayout>
</TableRow>